--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Anil Kumar</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link rel="icon" type="image/png" href="/Shinchan PNG Logo.png" />
+    <link rel="icon" type="image/png" href="/Shincha_PNG_Logo.png" />
   </head>
   <body>
     <!-- Nav Bar -->
