--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Anil Kumar</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" href="./Assests/Shinchan_PNG_Logo.png" type="image/x-icon" />
   </head>
   <body>
     <!-- Nav Bar -->
