--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/Assests/Shinchan_PNG_Logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/Assests/circleLogo.png" />
     <title>Anil Kumar</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link rel="shortcut icon" href="./Assests/Shinchan_PNG_Logo.png" type="image/x-icon">
   </head>
   <body>
     <!-- Nav Bar -->
